@startuml
interface ColumnManagerInterface {

}
interface RenderManagerInterface {
  reRenderView()
}
interface PaginationManagerInterface {
  setCurrentPage(page: number)
}
interface DataSelectorManagerInterface {
  set (entities)
  add (entity)
}
interface SortInterface {
  by(field: string)
}
interface ResetManagerInterface {
  reload()
}
interface DensityManagerInterface {
  setDensity(density: number)
}
abstract class TableFacadeAbstract {

}
class TableBuilder {
  getTableFacade(): TableFacadeAbstract
}

TableBuilder .> TableFacadeAbstract

ColumnManagerInterface <--o TableFacadeAbstract
RenderManagerInterface <--o TableFacadeAbstract
note left on link
table.reRenderView()
end note

TableFacadeAbstract -> PaginationManagerInterface
note left on link
pag.setCurrentPage(34)
end note
TableFacadeAbstract ---> DensityManagerInterface
TableFacadeAbstract ---> ResetManagerInterface
TableFacadeAbstract ---> SortInterface
TableFacadeAbstract ---> DataSelectorManagerInterface
@enduml